--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Towett Rising Hotel</title>
+    <title>Cheersway E-Commerce</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
         }
 
         .hero-section {
-            background-color: #b22222;
+            background-color: #803a00;
             color: white;
             padding: 50px 20px;
         }
@@ -29,7 +29,7 @@
         }
 
         .stats-section {
-            background-color: #f5f5f5;
+            background-color: #f8f9fa;
             color: #333;
             padding: 30px 20px;
             text-align: center;
@@ -55,19 +55,19 @@
         }
 
         .why-choose-us {
-            background-color: #b22222;
+            background-color: #008080;
             color: white;
             padding: 50px 20px;
         }
 
         .testimonials-section {
-            background-color: #f5f5f5;
+            background-color: #f8f9fa;
             color: #333;
             padding: 50px 20px;
         }
 
         .newsletter-section {
-            background-color: #b22222;
+            background-color: #008080;
             color: white;
             padding: 30px 20px;
             text-align: center;
@@ -86,24 +86,24 @@
         }
 
         .navbar-nav .nav-link:hover {
-            background-color: #b22222;
+            background-color: #008080;
             color: white;
             border-radius: 5px;
         }
 
         .btn-primary:hover {
             background-color: white;
-            color: #b22222;
-            border: 2px solid #b22222;
+            color: #008080;
+            border: 2px solid #008080;
         }
 
         .btn-primary {
-            background-color: #b22222;
-            border-color: #b22222;
+            background-color: #008080;
+            border-color: #008080;
         }
 
         .btn-primary:hover {
-            color: #b22222;
+            color: #008080;
         }
 
     </style>
@@ -112,7 +112,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Towett Rising Hotel</a>
+            <a class="navbar-brand" href="#"><img src="./E_Commerce/Logo.jpg" alt="Cheersway" style="max-width: 50%; border-radius: 5px;">   CHEERSWAY E-Commerce</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -122,13 +122,10 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reservations</a>
+                        <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -145,15 +142,15 @@
     <section class="hero-section">
         <div class="content">
             <div>
-                <h1>Welcome to Towett Rising Hotel</h1>
-                <p>Experience the best local and international dishes served with passion and excellence.</p>
+                <h1>Welcome to CHEERSWAY E-Commerce</h1>
+                <p>Your one-stop shop for all your needs, from electronics to fashion and beyond!</p>
                 <form class="d-flex">
-                    <input type="text" class="form-control me-2" placeholder="Search our menu...">
+                    <input type="text" class="form-control me-2" placeholder="Search products...">
                     <button class="btn btn-light">Search</button>
                 </form>
             </div>
             <div>
-                <img src="./Towett/the cover.jpg" alt="Delicious Food" style="max-width: 600px; border-radius: 600px;">
+                <img src="./E_Commerce/oNES.jpg" alt="Cheersway" style="max-width: 600px; border-radius: 400px;">
             </div>
         </div>
     </section>
@@ -162,86 +159,63 @@
     <section class="stats-section">
         <div>
             <h2>24/7</h2>
-            <p>Service Availability</p>
+            <p>Customer Support</p>
         </div>
         <div>
-            <h2>200+</h2>
-            <p>Dishes Served</p>
+            <h2>10K+</h2>
+            <p>Products Available</p>
         </div>
         <div>
-            <h2>1000+</h2>
-            <p>Satisfied Customers</p>
-            <img src="./Towett/owen image.jpeg">
+            <h2>1M+</h2>
+            <p>Happy Customers</p>
         </div>
     </section>
 
-    <!-- Menu Section -->
+    <!-- Featured Products Section -->
     <section class="specialists-section">
-        <h2 class="text-center">Our Menu Highlights</h2>
+        <h2 class="text-center">Featured Products</h2>
         <div class="row mt-4">
             <div class="col-md-3">
                 <div class="specialist-card">
-                    <img src="./Towett/live food.jpeg" alt="Local Delicacies">
-                    <h5>Local Delicacies</h5>
-                    <p>Experience the authentic taste of traditional dishes prepared with fresh ingredients.</p>
+                    <img src="./E_Commerce/electronics.jpeg" alt="ELECTRONICS" style="max-width: 100%; border-radius: 5px;">
+                    <h5>Electronics</h5>
+                    <p>Explore our range of top-quality gadgets and accessories.</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="specialist-card">
-                    <img src="./Towett/chipskip.jpeg" alt="International Cuisine">
-                    <h5>International Cuisine</h5>
-                    <p>Indulge in a variety of international flavors crafted by our expert chefs.</p>
+                    <img src="./E_Commerce/Fashion.jpg" alt="Fashion" style="max-width: 80%; border-radius: 2px;">
+                    <h5>Fashion</h5>
+                    <p>Stay trendy with our collection of clothing and accessories.</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="specialist-card">
-                    <img src="./Towett/foodie.jpeg" alt="Desserts">
-                    <h5>Desserts</h5>
-                    <p>Sweeten your experience with our delightful range of desserts.</p>
+                    <img src="./E_Commerce/Home appliances.jpeg" alt="HOME Appliances" style="max-width: 100%; border-radius: 5px;">
+                    <h5>Home Appliances</h5>
+                    <p>Upgrade your home with our durable and efficient appliances.</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="specialist-card">
-                    <img src="./Towett/chai.jpeg" alt="Beverages">
-                    <h5>Beverages</h5>
-                    <p>Complement your meal with our selection of refreshing beverages.</p>
+                    <img src="./E_Commerce/Books.jpeg" alt="BOOKS" style="max-width: 100%; border-radius: 5px;">
+                    <h5>Books</h5>
+                    <p>Discover a wide variety of books for all ages and interests.</p>
                 </div>
-
             </div>
         </div>
     </section>
-        <!-- how you choose-section -->
-        <section class="reason  you choose">
-            <h2 class="text-center">Why you choose us</h2>
-            <img src="./Towett/cheffs image.jpeg">
-            <p class="text-center">We offer the best services ever!</p>
-        </section>
 
     <!-- Testimonials Section -->
     <section class="testimonials-section">
-        <h2 class="text-center">What Our Guests Say</h2>
-        <p class="text-center">Read testimonials from our happy guests about their dining experiences.</p>
-    </section>
-
-    <!-- redefining comfort and elegance -->
-    <section class="hospitallity">
-        <div class="row align-items-center">
-            <!--text content (left side)-->
-            <div class="col-md-6">
-                <h2>Future Excellent Hospitallity</h2>
-                <p>We offer a warm hospitallity to ensure a stress-free experience</p>
-            </div>
-            <!--image(right side)-->
-            <div class="col-md-6">
-                <img src="./Towett/hospitallity.jpeg">
-            </div>
-        </div>
+        <h2 class="text-center">What Our Customers Say</h2>
+        <p class="text-center">Read testimonials from our satisfied shoppers about their experiences.</p>
     </section>
 
     <!-- Newsletter Section -->
     <section class="newsletter-section">
         <h2>Subscribe to Our Newsletter</h2>
-        <p>Stay updated with our latest offers and promotions.</p>
+        <p>Get the latest updates and special offers straight to your inbox.</p>
         <form class="d-flex justify-content-center">
             <input type="email" class="form-control me-2" placeholder="Enter your email">
             <button class="btn btn-light">Subscribe</button>
@@ -250,13 +224,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Towett Rising Hotel. All rights reserved.</p>
+        <p>&copy; CHEERSWAY E-Commerce. All rights reserved.</p>
         <footer class="bg-dark text-white py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h5>Towett Rising Hotel.</h5>
-                        <p>Food Fiti to keep you Forging Forward while you thrive</p>
+                        <h5>E-commerce</h5>
+                        <p>Your top notch products at your doorstep by a touch of a button!</p>
                     </div>
                     <div class="col-md-4">
                         <h5>Useful Links</h5>
@@ -268,13 +242,14 @@
                     </div>
                     <div class="col-md-4">
                         <h5>Address</h5>
-                        <p>P.O.M BOX 632-00618, 
-                            KASARANI NAIROBI, 
+                        <p>P.O. BOX 734-00100, 
+                            NAIROBI, 
                             KENYA</p>
                     </div>
                 </div>
             </div>
         </footer>
+    
     </footer>
 
     <!-- Bootstrap JS -->
